force-app/main/default/objects/SmarterPay_Payment_Config__c/SmarterPay_Payment_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SmarterPay Payment Config</label>
</CustomObject>