force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/Manage_Repeat_Payment_Dates__c.field-meta.xml
<CustomField>
    <fullName>Manage_Repeat_Payment_Dates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manage Repeat Payment Dates</label>
    <type>Checkbox</type>
</CustomField>