force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/SmarterPay_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SmarterPay_User_Name__c</fullName>
    <label>SmarterPay User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>