force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/Standard_Authenticate_Capture_MOTO__c.field-meta.xml
<CustomField>
    <fullName>Standard_Authenticate_Capture_MOTO__c</fullName>
    <label>Standard Authenticate Capture MOTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>