force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/Standard_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Standard_Ecommerce__c</fullName>
    <label>Standard Ecommerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>