force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/Standard_Refund__c.field-meta.xml
<CustomField>
    <fullName>Standard_Refund__c</fullName>
    <label>Standard Refund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>