force-app/main/default/objects/SmarterPay_Payment_Config__c/fields/Standard_Repeat__c.field-meta.xml
<CustomField>
    <fullName>Standard_Repeat__c</fullName>
    <label>Standard Repeat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>